# gazebo_cpp_examples

./: .gitignore  CMakeLists.txt  README.md  camera_viewer.py  package.xml  pattern_finder3.py
erle-copter_pattern_follower/: CMakeLists.txt  package.xml
erle-copter_pattern_follower/src/: image_subscriber.cpp
ros_erle_cpp_examples_arming_and_disarming/: CMakeLists.txt  package.xml
ros_erle_cpp_examples_arming_and_disarming/src/: arming.cpp  disarming.cpp
ros_erle_cpp_examples_change_mode/: CMakeLists.txt  package.xml
ros_erle_cpp_examples_change_mode/src/: changemode.cpp
ros_erle_cpp_examples_rc/: CMakeLists.txt  package.xml
ros_erle_cpp_examples_rc/src/: rc.cpp
ros_erle_cpp_teleoperation_erle_rover/: CMakeLists.txt  package.xml
ros_erle_cpp_teleoperation_erle_rover/src/: main.cpp  main2.cpp
ros_erle_rover_navigation/: CMakeLists.txt  package.xml
ros_erle_rover_navigation/launch/: localizacion.launch  move_base.launch  navigation.launch  navigation_sim.launch  odom_laser.launch  slam.launch  tf.launch  view_navigation.launch
ros_erle_rover_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
ros_erle_rover_navigation/rviz/: navigation.rviz  navigation_rover.rviz
ros_erle_rover_tf/: CMakeLists.txt  package.xml
ros_erle_rover_tf/src/: tf_real.cpp  tf_sim.cpp
scripts/: pattern_finder.py  pattern_finder2.py  pattern_finder3.py
src/: auruco_test.cpp  follower.pro  image_subscriber.cpp
