<?xml version="1.0"?>
<package>
  <name>ros_erle_pattern_follower</name>
  <version>0.0.0</version>
  <description>The ros_erle_pattern_follower package</description>

  <maintainer email="erle@todo.todo">erle</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>aruco</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>aruco</run_depend>
</package>
